@@ -4,7 +4,7 @@
 
 ;; Author: Serghei Iakovlev <sadhooklay@gmail.com>
 ;; Maintainer: Serghei Iakovlev
-;; Version: 0.4.0
+;; Version: 0.4.1
 ;; URL: https://github.com/sergeyklay/bnf-mode
 
 ;; This file is NOT part of GNU Emacs.
